# python

./: .env.example  .gitignore  .gitignore copy  DOKUMENTACJA.md  Dockerfile  Dockerfile.mcp  README copy.md  README.md  TESTING.md  TEST_REPORT.md  camel-routes.xml  docker-compose.yml  docker-entrypoint.sh  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  run_mcp_services.sh  setup.py  src.md  test-advanced-reply.sh  test-email.sh  test.sh  test_mcp_services.py  tox.ini
.github/workflows/: python-tests.yml
ansible/: README.md  ansible.cfg  email_scenarios_tests.yml  email_service_tests.yml  email_tests.yml  inventory.ini  main.yml  mcp_tests.yml  run  run.sh
app/: fix_main.py  main.py  mcp_attachment_processor.py  mcp_integration.py  mcp_server.py  mcp_spam_detection.py  mcp_tinyllm_email_processor.py  models.py
app/data/: emails.db
app/processors/: email_processor.py
app/services/: db_service.py  email_processor.py  email_service.py  llm_service.py  template_service.py
app/tests/: test_auto_reply.py
data/templates/: default.template  frequent_sender.template  (+2 more)
docs/: EMAIL_PROCESSING_FLOW.md  MCP_ARCHITECTURE.md  MCP_IMPLEMENTATION.md  MCP_INTEGRATION.md  MCP_TESTING.md
scripts/: install.bat  install.sh  run-advanced.sh  setup-db.js  setup.sh  start.bat  start.sh
test/: reply.sh
tests/: docker_test_auto_reply.sh  mocks.py  syntax_check.py  test_auto_reply.py  test_auto_reply_endpoint.py  test_auto_reply_endpoint_simple.py  test_auto_reply_simple.py  test_basic.py  test_mcp_auto_reply.py  test_mcp_auto_reply_unit.py
