[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "invalid-name",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-statements",
    "too-many-branches",
    "too-many-return-statements",
    "too-many-public-methods",
    "too-many-lines",
    "broad-except",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
